# dl-by-doing

./: .gitignore  README.md  pyproject.toml
dev/: batch_norm.ipynb  bengio2003.ipynb
dl/attention/: __init__.py  test_attention.py
dl/batch_norm/: modules.py  test_modules.py
dl/bengio2003/: litmodule.py  main.py  modules.py  test_modules.py
