[tool.poetry]
name = "dl"
version = "0.1.0"
description = ""
authors = ["Magnus Glasder <mglasder@ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
assertpy = "^1.1"
pytest = "^7.3.1"
torch = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
